# thesis-infrastructure

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
terraform/live/: root.hcl
terraform/live/global/: global.hcl
terraform/live/global/iam/teams/: application.json  researchers.json  terragrunt.hcl
terraform/live/global/iam/users/: terragrunt.hcl
terraform/live/global/registry/repository/: .terraform.lock.hcl  terragrunt.hcl
terraform/live/global/s3/tf-state/: terragrunt.hcl
terraform/live/production/: production.hcl
terraform/live/production/compute/api-app/: terragrunt.hcl
terraform/live/production/storage/bucket/: terragrunt.hcl
terraform/shared/compute/droplet/: data.tf  main.tf  variables.tf
terraform/shared/iam/teams/: README.md  main.tf  variables.tf
terraform/shared/iam/users/: README.md  main.tf  variables.tf  versions.tf
terraform/shared/registry/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/shared/storage/s3-bucket/: README.md  data.tf  main.tf  outputs.tf  variables.tf
terraform/shared/storage/tf-state-bucket/: README.md  main.tf  outputs.tf  variables.tf
