[tool.poetry]
name = "thesis-infrastructure"
version = "1.0.0"
description = "Thesis infrastructure resources"
authors = ["Jairo JM Quispe <jairo@denebtech.com.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
